# GifConverter

./: .gitignore  .pylintrc  LICENSE.txt  README.md  __version__.py  imageToGif.py  main.py  pyproject.toml  readme.txt  requirements.txt  tasks.py
