[project]
name = "ImageToGif"
version = "1.0.0"
description = "Convert your images into a singular animated gif."
readme = "README.md"

requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["gif", "animation"]

authors = [
  { name = "Jeff Miller", email = "jeff3danimation@gmail.com" }
]
maintainers = [
  { name = "Jeff Miller", email = "jeff3danimation@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Artists",
  "Topic :: Software Development :: Image Converter",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "wand",
  'pep517',
  'pyreadline',
  'resource',
  'os.path',
  'org.python.core',
  'java.lang',
  'dummy.Process',
  'collections.Sequence',
  'asyncio.DefaultEventLoopPolicy',
  '_winreg',
  'posixshmem',
  '_frozen_importlib',
  '_frozen_importlib_external',
  '__main__'
]

[project.optional-dependencies]
dev = ["pyinstaller", 'invoke', 'pylint']
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/crisosphinx/GifConverter"
"Bug Reports" = "https://github.com/crisosphinx/GifConverter/issues"
"Source" = "https://github.com/crisosphinx/GifConverter"

[tool.setuptools]
py-modules = []
package-data = {"readme" = ["readme.txt"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"